src-ken&y/objects/Sales_Order__c.object
<CustomObject>
    <fields>
        <fullName>Total_Quantity_Ordered__c</fullName>
        <description>Total Quantity Ordered of all Sales Order Lines</description>
        <label>Total Quantity Ordered</label>
        <summarizedField>Sales_Order_Line__c.Quantity_Ordered__c</summarizedField>
        <summaryFilterItems>
            <field>Sales_Order_Line__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Order_Line__c.Sales_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Quantity_Shipped__c</fullName>
        <description>Total Quantity Shipped of all Sales Order Lines</description>
        <label>Total Quantity Shipped</label>
        <summarizedField>Sales_Order_Line__c.Quantity_Shipped__c</summarizedField>
        <summaryForeignKey>Sales_Order_Line__c.Sales_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Weight__c</fullName>
        <label>Total Weight</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
                <value>
                    <fullName>RMA-Credit</fullName>
                </value>
                <value>
                    <fullName>RMA-Customer-Repair</fullName>
                </value>
                <value>
                    <fullName>RMA-Replacement</fullName>
                </value>
                <value>
                    <fullName>Resale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_Amount__c</fullName>
        <label>VAT Amount</label>
        <summarizedField>Sales_Order_Line__c.VAT_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Sales_Order_Line__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Sales_Order_Line__c.Sales_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Weight_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Weight UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Customer Zip Code</description>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Sales Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Type__c</columns>
        <columns>Date_Time_Ordered__c</columns>
        <columns>Customer__c</columns>
        <columns>Ship_to__c</columns>
        <columns>Order_Total__c</columns>
        <columns>Open_Sales_Order_Lines__c</columns>
        <columns>Required_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Hold__c</columns>
        <columns>Has_Exceptions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_open</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Date_Time_Ordered__c</columns>
        <columns>Order_Total__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Backorder_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open</label>
    </listViews>
    <listViews>
        <fullName>Override_Credit_Hold</fullName>
        <columns>NAME</columns>
        <columns>Top_Parent_Customer__c</columns>
        <columns>Credit_Hold__c</columns>
        <columns>Override_Credit_Hold__c</columns>
        <columns>Required_Date__c</columns>
        <columns>Payment_Term__c</columns>
        <columns>Subtotal__c</columns>
        <columns>Company__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Override_Credit_Hold__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Credit_Hold__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Override Credit Hold</label>
    </listViews>
    <nameField>
        <label>Sales Order</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_for_Ship_To_Parent_and_Top_Parent</fullName>
        <active>true</active>
        <description>Check for Ship to parent is Sold to and Ship to&apos;s top parent is Sold to&apos;s  Top parent</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK(  Ship_to__c )  ||  ISNULL(  Ship_to__c  )) 
,
NOT(
Ship_to__r.Parent_Customer__c  =  Customer__c  
||  
Ship_to__r.Top_Parent_Customer__c  =   Customer__r.Top_Parent_Customer__c
))</errorConditionFormula>
        <errorMessage>The customers on the Sales Order are not within the same hierarchy.  Please make sure the Ship-To is part of the Sold-To&apos;s hierarchy AND the top parents for both match.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_for_Sold_to_parent_is_Bill_to</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT( ISBLANK( Bill_to__c )  ||  ISNULL( Bill_to__c ) )
,
NOT(
Customer__r.Parent_Customer__c  =  Bill_to__c  
))</errorConditionFormula>
        <errorMessage>Please make sure the Sold To&apos;s parent is a bill-to within its hierarchy.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_for_Top_parent</fullName>
        <active>true</active>
        <description>Check for Bill to Top parent equals to Sold to Top parent</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK (Bill_to__c) ||  ISNULL (Bill_to__c))  
,
NOT(
Bill_to__r.Top_Parent_Customer__c  =   Customer__r.Top_Parent_Customer__c
)
)</errorConditionFormula>
        <errorMessage>The Bill-To and Sold-To are not part of the same customer hierarchy.  Please pick a Sold-To that exists under the Bill-To</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Check</fullName>
        <active>false</active>
        <errorConditionFormula>AND(  
  ISCHANGED( Status__c ),  
  NOT ( 
      OR(
        ISPICKVAL(  PRIORVALUE( Status__c ), &quot;Draft&quot; ),
        ISPICKVAL(  PRIORVALUE( Status__c ), &quot;Open&quot; )
      )
  ), 
  AND (
      NOT ( 
        ISPICKVAL( Status__c , &quot;Open&quot; )
      )
  )
)</errorConditionFormula>
        <errorMessage>The Sales Order is Not Open. Changes are not allowed on this order.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Company_must_not_change</fullName>
        <active>true</active>
        <description>after creating a SO for a given company, do not allow the SO to change to another company</description>
        <errorConditionFormula>AND(
 NOT( ISNULL(Company__c  ) ), 
 ISCHANGED(Company__c)
)</errorConditionFormula>
        <errorMessage>The company cannot be changed for a Sales Order.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_required_for_resale_orders</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Type__c, &apos;Resale&apos;) &amp;&amp;  ISBLANK( Customer__c )</errorConditionFormula>
        <errorMessage>Customer is required to create a Sales order of type Resale</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Cancelled_Sales_Orders</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED( Status__c ), 
ISPICKVAL(PRIORVALUE(Status__c),&quot;Cancelled&quot;)
)</errorConditionFormula>
        <errorMessage>Cancelled Sales order status cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Sales_Order_Bill_To_Address_fields</fullName>
        <active>true</active>
        <errorConditionFormula>!ISCHANGED(Bill_to__c) &amp;&amp; (ISCHANGED( Bill_to_Street__c ) || ISCHANGED( Bill_to_City__c ) || ISCHANGED( Bill_to_State__c ) || ISCHANGED( Bill_to_Country__c ) || ISCHANGED( Bill_to_Zip_Code__c ))</errorConditionFormula>
        <errorMessage>Bill-To Address fields cannot be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Sales_Order_Ship_To_Address_fields</fullName>
        <active>true</active>
        <errorConditionFormula>!ISCHANGED(Ship_to__c) &amp;&amp; (ISCHANGED( Ship_to_Street__c ) ||  ISCHANGED( Ship_to_City__c ) || ISCHANGED( Ship_to_State__c ) ||  ISCHANGED( Ship_to_Country__c ) || ISCHANGED( Ship_to_Zip_Code__c ))</errorConditionFormula>
        <errorMessage>Ship-To Address fields cannot be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Locked_when_Released3PL_is_true</fullName>
        <active>true</active>
        <errorConditionFormula>Released_to_3PL__c == true &amp;&amp; NOT(ISCHANGED( Released_to_3PL__c ) )</errorConditionFormula>
        <errorMessage>Sales Order cannot be modified once Released to 3PL.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Manual_price_determination_not_null</fullName>
        <active>true</active>
        <description>Cannot allow Pricing date to be null when using manual price determination date.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Price_Determination_Date__c, &apos;Manual&apos;),
ISNULL(Pricing_Date__c)
)</errorConditionFormula>
        <errorMessage>Cannot allow Pricing date to be null when using manual price determination date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Subtotal_cannot_be_negative</fullName>
        <active>true</active>
        <description>Standard Sales order types cannot have a negative sub total value</description>
        <errorConditionFormula>AND( Subtotal__c &lt; 0,
 NOT(ISPICKVAL( Type__c , &apos;RMA-Replacement&apos;)),
 NOT(ISPICKVAL( Type__c , &apos;RMA-Credit&apos;)),
 NOT(ISPICKVAL( Type__c , &apos;RMA-Customer-Repair&apos;)),
 NOT(ISPICKVAL( Type__c , &apos;Military&apos;)),
 NOT(ISPICKVAL( Type__c , &apos;Military Dist Credit&apos;)),
 NOT(ISPICKVAL( Type__c , &apos;SPIN&apos;)),
 NOT(ISPICKVAL( Type__c , &apos;Adjustment&apos;)),
 NOT(ISPICKVAL( Type__c , &apos;Price Adjustment - Claim&apos;)),
 NOT(ISPICKVAL( Type__c , &apos;Quantity Adjustment - Claim&apos;)),
 NOT(ISPICKVAL( Type__c , &apos;Price Adjustment - AR&apos;)),
 NOT(ISPICKVAL( Type__c , &apos;Quantity Adjustment - AR&apos;)),
 NOT(ISPICKVAL( Type__c , &apos;Quantity Adjustment - Claim Return&apos;)),
 NOT(ISPICKVAL( Type__c , &apos;Quantity Adjustment - AR Return&apos;)),
 NOT(ISPICKVAL( Type__c , &apos;Quantity Adjustment - Recall&apos;))
)</errorConditionFormula>
        <errorMessage>You cannot have a negative total from all the lines on a standard Sales Order.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unit_of_Measure_not_to_be_changed</fullName>
        <active>true</active>
        <description>Unit of Measure cannot be changed.</description>
        <errorConditionFormula>AND(OR(ISCHANGED( Weight_UOM__c ),ISCHANGED( Dimension_UOM__c )) , NOT(ISPICKVAL( Status__c , &apos;DRAFT&apos;))  )</errorConditionFormula>
        <errorMessage>Unit of Measure cannot be changed after the Sales Order has been released.</errorMessage>
    </validationRules>
</CustomObject>